syntax = "proto3";

package com.duke.protobuf.data;

option csharp_namespace = "SkillBridge.Message";
option cc_enable_arenas = true;
option java_multiple_files = true;

////////////////////////////////////////////////////////////////
//
//  Basic Defines
//
////////////////////////////////////////////////////////////////
enum RESULT
{
    SUCCESS = 0;
    FAILED = 1;
}

enum CHARACTER_TYPE
{
    Player = 0;
    NPC = 1;
    Monster = 2;
}

enum CHARACTER_CLASS
{
    NONE = 0;
    WARRIOR = 1;
    WIZARD = 2;
    ARCHER = 3;
}

enum CHARACTER_STATE
{
    IDLE = 0;
    MOVE = 1;
}

enum ITEM_TYPE {
    // 常规道具
    NORMAL = 0;
    // 材料道具
    MATERIAL = 1;
    // 任务道具
    TASK = 2;
    // 装备
    EQUIP = 3;
}

/// 装备槽枚举
enum EQUIP_SLOT {
    // 武器
    WEAPON = 0;
    // 副手
    ACCESSORY = 1;
    // 头盔
    HELMET = 2;
    // 胸甲
    CHEST = 3;
    // 肩甲
    SHOULDER = 4;
    // 裤子
    PANTS = 5;
    // 鞋子
    BOOTS = 6;
    // 最大限位
    SLOT_MAX = 7;
}

/// 状态通知相关
//enum STATUS_SOURCE {
//    UPDATE = 0;
//    ADD = 1;
//    DELETE = 2;
//}

// 状态变化通知
message NStatus {
    enum STATUS_ACTION {
        UPDATE = 0;
        ADD = 1;
        DELETE = 2;
    }

    enum STATUS_TYPE {
        MONEY = 0;
        EXP = 1;
        SKILL_POINT = 2;
        ITEM = 3;
    }

    STATUS_TYPE type = 1;
    STATUS_ACTION action = 2;
    int32 id = 3;
    int32 value = 4;
}

message StatusNotify {
    repeated NStatus status = 1;
}

message NItemInfo {
    int32 id = 1;
    int32 count = 2;
}

// 背包数据
message NBagInfo {
    // 解锁了多少个格子
    int32 unlocked = 1;
    // 具体道具数据（二进制）
    bytes items = 2;
}

message NUserInfo {
    int32 id = 1;
    NPlayerInfo player = 2;
}

message NPlayerInfo {
    int32 id = 1;
    repeated NCharacterInfo characters = 2;
}

message NCharacterInfo {
    int32 id = 1;
    int32 tid = 2;
    string name = 3;
    CHARACTER_TYPE type = 4;
    CHARACTER_CLASS class = 5;
    int32 level = 6;
    int32 mapId = 7;
    NEntity entity = 8;
    int64 carriedMoney = 9;
    repeated NItemInfo items = 10;
    NBagInfo bag = 11;
    // 装备信息（字节数组形式）
    bytes equips = 12;
}

message NVector3
{
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

////////////////////////////////////////////////////////////////
//
//  Entities
//
////////////////////////////////////////////////////////////////


message NEntity {
    int32 id = 1;
    NVector3 position = 2;
    NVector3 direction = 3;
    int32 speed = 4;
}

message NEntitySync {
    enum ENTITY_EVENT
    {
        NONE = 0;
        IDLE = 1;
        MOVE_FWD = 2;
        MOVE_BACK = 3;
        JUMP = 4;
    }

    int32 id = 1;
    ENTITY_EVENT event = 2;
    NEntity entity = 3;
}



////////////////////////////////////////////////////////////////
//
//  Messages
//
////////////////////////////////////////////////////////////////

message NetMessage {
    NetMessageRequest Request = 1;
    NetMessageResponse Response = 2;
}

message NetMessageRequest {
    UserRegisterRequest userRegister = 1;
    UserLoginRequest userLogin = 2;
    UserCreateCharacterRequest createChar = 3;
    UserGameEnterRequest gameEnter = 4;
    UserGameLeaveRequest gameLeave = 5;

    MapCharacterEnterRequest mapCharacterEnter = 6;

    MapEntitySyncRequest mapEntitySync = 8;
    MapTeleportRequest mapTeleport = 9;

    BagSaveRequest bagSave = 10;

    ItemPurchaseRequest itemPurchase = 11;
    ItemEquipRequest itemEquip = 12;
}

message NetMessageResponse {
    UserRegisterResponse userRegister = 1;
    UserLoginResponse userLogin = 2;
    UserCreateCharacterResponse createChar = 3;
    UserGameEnterResponse gameEnter = 4;
    UserGameLeaveResponse gameLeave = 5;

    MapCharacterEnterResponse mapCharacterEnter = 6;
    MapCharacterLeaveResponse mapCharacterLeave = 7;

    MapEntitySyncResponse mapEntitySync = 8;

    BagSaveResponse bagSaveResponse = 9;

    ItemPurchaseResponse itemPurchase = 10;
    ItemEquipResponse itemEquip = 11;

    StatusNotify statusNotify = 100;
}


// User Protocol
message UserLoginRequest {
    string user = 1;
    string passward = 2;
}

message UserLoginResponse {
    RESULT result = 1;
    string errormsg = 2;
    NUserInfo userinfo = 3;
}


message UserRegisterRequest
{
    string user = 1;
    string passward = 2;
}

message UserRegisterResponse {
    RESULT result = 1;
    string errormsg = 2;
}

message UserCreateCharacterRequest
{
    string name = 1;
    CHARACTER_CLASS class = 2;
}

message UserCreateCharacterResponse {
    RESULT result = 1;
    string errormsg = 2;
    repeated NCharacterInfo characters = 3;
}

message UserGameEnterRequest
{
    int32 characterIdx = 1;
}

message UserGameEnterResponse {
    RESULT result = 1;
    string errormsg = 2;

    NCharacterInfo character = 3;
}

message UserGameLeaveRequest
{
}

message UserGameLeaveResponse {
    RESULT result = 1;
    string errormsg = 2;
}

// Map Protocol
message MapCharacterEnterRequest
{
    int32 mapId = 1;
}

message MapCharacterEnterResponse
{
    int32 mapId = 1;
    repeated NCharacterInfo characters = 2;
}

message MapCharacterLeaveResponse
{
    int32 characterId = 1;
}

/// 地图实体同步
message MapEntitySyncRequest {
    NEntitySync entitySync = 1;
}
message MapEntitySyncResponse {
    repeated NEntitySync entitySyncs = 2;
}

/// 地图传送
message MapTeleportRequest {
    int32 teleporterId = 1;
}

/// 背包保存
message BagSaveRequest {
    NBagInfo bagInfo = 1;
}
message BagSaveResponse {
    RESULT result = 1;
    string errormsg = 2;
}

/// 购买道具
message ItemPurchaseRequest {
    int32 shopId = 1;
    int32 shopItemId = 2;
}
message ItemPurchaseResponse {
    RESULT result = 1;
    string errormsg = 2;
}

/// 装备穿脱
message ItemEquipRequest {
    int32 slot = 1;
    int32 itemId = 2;
    bool isPutOn = 3;
}
message ItemEquipResponse {
    RESULT result = 1;
    string errormsg = 2;
}
